# discord-soundboard

./: .gitignore  README.md  WINDOWS_SETUP.md  bot_windows.py  plan.md  pyproject.toml  pytest.ini  run_tests.sh  start.sh
backend/: jest.config.js  package-lock.json  package.json  server.js
backend/data/: hotkeys.json
backend/tests/: api.test.js  setup.js  socket.test.js
bot/: __init__.py  main.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/__tests__/: App.test.js  BotStatus.test.js  SoundBoard.test.js  UploadSection.test.js
frontend/src/components/: BotStatus.js  HotkeyEditor.js  HotkeyList.js  HotkeyManager.js  SoundBoard.js  UploadSection.js
overwolf/: index.html  manifest.json
overwolf/background/: background.html  background.js
overwolf/shared/: api.js  storage.js  utils.js
overwolf/windows/: settings.css  settings.html  settings.js
sounds/: README.md
tests/: test_bot.py
tests/integration/: test_api_integration.py  test_end_to_end.py
